--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -32,7 +34,11 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "quotes": ["error", "double"],
+      "semi": ["error", "always"],
+      "indent": ["error", 4]
+    }
   },
   "browserslist": [
     "> 1%",
